[package]
name = "rusty_drones"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
rand = "0.8.4"
# For now we use the code from the not merged PR
# wgl_2024 = { git = "https://github.com/DiCesareDaniele/WGL_repo_2024.git" }
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", branch = "main" }

