[package]
name = "rusty_drones"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
rand = "0.8.4"
# wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["debug"]}
wg_2024 = { git = "https://github.com/Rusteze-AP/RS_WGL_2024", branch = "test-cases", features = ["debug"]}

